[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/options.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sound/sfx/ui_select.wav" type="Sample" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="SampleLibrary" id=4]

samples/ui_select = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="options" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 848.0
margin/bottom = 430.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 264.0
margin/top = 20.0
margin/right = 584.0
margin/bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="display" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 110.0
margin/right = 578.0
margin/bottom = 148.0

[node name="text" type="Label" parent="display"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 508.0
margin/bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "display: fullscreen"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ball_count" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 180.0
margin/right = 768.0
margin/bottom = 227.0
custom_fonts/font = SubResource( 2 )
text = "Max Balls: 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ball_count_slider" type="HSlider" parent="ball_count"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 350.0
margin/top = 14.0
margin/right = 690.0
margin/bottom = 30.0
range/min = 1.0
range/max = 9.0
range/step = 1.0
range/page = 0.0
range/value = 4.0
range/exp_edit = false
range/rounded = false
tick_count = 9
ticks_on_borders = true
focus_mode = 2

[node name="volume" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 250.0
margin/right = 769.0
margin/bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Volume: 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="volume_slider" type="HSlider" parent="volume"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 350.0
margin/top = 14.0
margin/right = 690.0
margin/bottom = 30.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
tick_count = 10
ticks_on_borders = true
focus_mode = 2

[node name="close" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 351.0
margin/top = 339.0
margin/right = 497.0
margin/bottom = 383.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close"
flat = false

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="input_event" from="display" to="." method="_on_display_input_event"]

[connection signal="value_changed" from="ball_count/ball_count_slider" to="." method="_on_ball_count_slider_value_changed"]

[connection signal="value_changed" from="volume/volume_slider" to="." method="_on_volume_slider_value_changed"]

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]


